new rewired with abolute path and first login styles

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -1,5 +1,31 @@
+@import "./colors.scss";
 html {
   box-sizing: border-box;
   font-size: 62.5%;
   height: 100%;
+}
+body {
+  color: $backgroundPrimary;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.36;
+  font-size: 1.4rem;
+  min-height: 100%;
+  margin: 0;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #373330;
+  height: 101%;
+  max-height: 100%;
+  min-width: 50rem;
+  &::after {
+    clear: both;
+    content: "";
+    display: table;
+  }
 }
