--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -8,3 +8,4 @@ $buttonPrimaryHover: #ba4000;
 $buttonTextShadowHover: 0 0 0 1px #007bdb;
 // layout
 $backgroundPrimary: #41362f;
+$loginbackground: #373330;
