--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,23 +1,43 @@
 @import "../../assets/styles/colors.scss";
-.section {
+body {
+  color: $backgroundPrimary;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.36;
+  font-size: 1.4rem;
+  min-height: 100%;
+  margin: 0;
+  align-items: center;
+  display: flex;
+  background-color: $loginbackground;
+  height: 101%;
+  max-height: 100%;
+  min-width: 50rem;
+  &::after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+}
+#root {
   -webkit-flex-grow: 0;
-flex-grow: 0;
--webkit-flex-shrink: 0;
-flex-shrink: 0;
-background-color: #fff;
-border: 1px solid #e3e3e3;
-box-shadow: 0 5px 30px 0 #000;
-display: block;
-float: none;
-margin: auto;
-max-width: 45rem;
-min-height: 30rem;
-min-width: 0;
-padding: 40px 80px 50px;
-position: relative;
-width: 100%;
-z-index: 1;
+  flex-grow: 0;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  background-color: #fff;
+  border: 1px solid #e3e3e3;
+  box-shadow: 0 5px 30px 0 #000;
+  display: block;
+  float: none;
+  margin: auto;
+  max-width: 45rem;
+  min-height: 30rem;
+  min-width: 0;
+  padding: 40px 80px 50px;
+  position: relative;
+  width: 100%;
+  z-index: 1;
 }
 .login-page__wrapper {
-
 }
