--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -41,3 +41,14 @@ body {
 }
 .login-page__wrapper {
 }
+.login-page__copyright {
+  color: #989287;
+  font-size: 1rem;
+  font-weight: 400;
+  left: 0;
+  margin: 5rem 0 2rem;
+  position: absolute;
+  text-align: center;
+  top: 100%;
+  width: 100%;
+}
