charging new .ico and react icons library

--- a/src/assets/styles/_font-faces.scss
+++ b/src/assets/styles/_font-faces.scss
@@ -1,3 +1,7 @@
+/**
+* Open Sans
+*
+*/
 @font-face {
   font-family: "SansExtraBold";
   src: local("SansExtraBold"), url("../fonts/Open-Sans/ExtraBold.ttf") format("truetype");
