--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -6,6 +6,7 @@ $buttonTextShadow: 1px 1px 0 rgba(0, 0, 0, 0.25);
 $buttonBorderPrimaryHover: #b84002;
 $buttonPrimaryHover: #ba4000;
 $buttonTextShadowHover: 0 0 0 1px #007bdb;
+$headerBackground: #373330;
 // layout
 $backgroundPrimary: #41362f;
 $loginbackground: #373330;
