--- a/src/components/molecules/Menu/index.module.scss
+++ b/src/components/molecules/Menu/index.module.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/colors.scss";
+@import "../../../assets/styles/colors.scss";
 .menuWrapper {
   left: 0;
   position: fixed;
