--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -7,6 +7,8 @@ $buttonBorderPrimaryHover: #b84002;
 $buttonPrimaryHover: #ba4000;
 $buttonTextShadowHover: 0 0 0 1px #007bdb;
 $headerBackground: #373330;
+$primaryColor: #41362f;
+
 // layout
 $backgroundPrimary: #41362f;
 $loginbackground: #373330;
