--- a/src/components/molecules/Header/index.module.scss
+++ b/src/components/molecules/Header/index.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1.2rem;
+  padding: 1.5rem 3rem;
 }
 .actionsWrapper {
   > div {
