--- a/src/components/molecules/UserMenu/index.module.scss
+++ b/src/components/molecules/UserMenu/index.module.scss
@@ -1,3 +1,9 @@
 .adminUser {
-
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  > span {
+    margin-left: 5px;
+  }
 }
