--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -8,7 +8,7 @@ $buttonPrimaryHover: #ba4000;
 $buttonTextShadowHover: 0 0 0 1px #007bdb;
 $headerBackground: #373330;
 $primaryColor: #41362f;
-
+$secondaryColor: #fcfcfc;
 // layout
 $backgroundPrimary: #41362f;
 $loginbackground: #373330;
