--- a/src/components/molecules/Menu/index.module.scss
+++ b/src/components/molecules/Menu/index.module.scss
@@ -78,7 +78,6 @@
   li {
     min-width: 23.8rem;
     display: block;
-    color: #fcfcfc;
     transition: background-color 0.1s linear;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -86,9 +85,12 @@
       background-color: #403934;
     }
     a {
+      color: $secondaryColor;
       padding: 1.25rem 1.5rem;
       width: 100%;
       display: block;
+      transition: background-color .1s linear;
+      text-decoration: none;
     }
   }
 }
