--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -1,12 +1,35 @@
+@import "./_font-faces.scss";
 @import "./colors.scss";
+
+#root {
+  color: $backgroundPrimary;
+  font-family: SansRegular, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.36;
+  font-size: 1.4rem;
+  min-height: 100%;
+  margin: 0;
+  height: 101%;
+  max-height: 100%;
+  min-width: 50rem;
+
+  &::after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
   height: 100%;
 }
+
 body {
   color: $backgroundPrimary;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: SansRegular, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.36;
@@ -16,36 +39,21 @@ body {
   height: 101%;
   max-height: 100%;
   min-width: 50rem;
+
   &::after {
     clear: both;
     content: "";
     display: table;
   }
 }
-#root {
-  color: $backgroundPrimary;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.36;
-  font-size: 1.4rem;
-  min-height: 100%;
-  margin: 0;
-  height: 101%;
-  max-height: 100%;
-  min-width: 50rem;
-  &::after {
-    clear: both;
-    content: "";
-    display: table;
-  }
-}
+
 ul,
 ol {
   list-style: none none;
   margin: 0;
   padding: 0;
 }
+
 h1 {
   margin: 0 0 2rem;
   margin-bottom: 2rem;
@@ -54,6 +62,7 @@ h1 {
   line-height: 1.2;
   font-size: 2.8rem;
 }
+
 .page-title {
   color: #41362f;
   font-size: 2.8rem;
