starting to work in the fetch of categories

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -9,6 +9,9 @@ $buttonTextShadowHover: 0 0 0 1px #007bdb;
 $headerBackground: #373330;
 $primaryColor: #41362f;
 $secondaryColor: #fcfcfc;
+$secondaryColorHover:#514943;
+$secondaryBackgroundColorHover: #dbdbdb;
+
 // layout
 $backgroundPrimary: #41362f;
 $loginbackground: #373330;
